// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tagGrid secondlevel tag 1`] = `
<div
  className="SkBreadcrumbs-container-1"
>
  <a
    className="SkLink-anchor-4"
    href="/"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    tabIndex={0}
  >
    <span
      className="SkBreadcrumbs-breadcrumbLink-2"
    >
      Home
    </span>
  </a>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-5 SkBreadcrumbs-breadcrumbIcon-3"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
    />
  </svg>
  <a
    className="SkLink-anchor-4"
    href="/tag/tag-a"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    tabIndex={0}
  >
    <span
      className="SkBreadcrumbs-breadcrumbLink-2"
    >
      Tag A
    </span>
  </a>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-5 SkBreadcrumbs-breadcrumbIcon-3"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
    />
  </svg>
  <a
    className="SkLink-anchor-4"
    href="/tag/tag-a-1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    tabIndex={0}
  >
    <span
      className="SkBreadcrumbs-breadcrumbLink-2"
    >
      Tag A-1
    </span>
  </a>
</div>
`;

exports[`tagGrid top level tag 1`] = `
<div
  className="SkBreadcrumbs-container-1"
>
  <a
    className="SkLink-anchor-4"
    href="/"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    tabIndex={0}
  >
    <span
      className="SkBreadcrumbs-breadcrumbLink-2"
    >
      Home
    </span>
  </a>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-5 SkBreadcrumbs-breadcrumbIcon-3"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
    />
  </svg>
  <a
    className="SkLink-anchor-4"
    href="/tag/tag-a"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    tabIndex={0}
  >
    <span
      className="SkBreadcrumbs-breadcrumbLink-2"
    >
      Tag A
    </span>
  </a>
</div>
`;
